--- a/style.css
+++ b/style.css
@@ -63,30 +63,6 @@ p {
   display: inline-block;
 }
 
-/*footer */
-footer {
-  background-color: #3f3f49;
-  width: 100%;
-  height: 150px;
-  margin: 40px auto;
-  color: #fefefe;
-  padding-top: 80px;
-  bottom: 0%;
-  font-family: 'Barlow Semi Condensed';
-  font-size: 20px;
-  text-align: left;
-}
-
-footer a {
-  color: #fefefe;
-  line-height: 1.5;
-  text-decoration: none;
-}
-
-footer a:hover{
-  color: #11cd85;
-}
-
 .pageEnd {
   margin: 0 auto;
   padding: 20px 20px;
@@ -111,11 +87,11 @@ footer a:hover{
   float: left;
   color: #fefefe;
   text-align: center;
-  padding: 8px 16px;
   text-decoration: none;
   font-family: 'Barlow Semi Condensed';
   margin: 0 auto;
   font-size: 28px;
+  padding-left: 10px;
 }
 
 .topnav ul {
@@ -123,16 +99,6 @@ footer a:hover{
   padding: 14px;
 }
 
-.topnav img {
-  float: left;
-  color: #fefefe;
-  text-align: center;
-  padding: 0px 0px;
-  text-decoration: none;
-  font-family: 'Barlow Semi Condensed';
-  margin: 0 auto;
-  font-size: 24px;
-}
 
 /* Change the color of links on hover */
 .topnav a:hover {
@@ -353,7 +319,7 @@ footer a:hover{
 }
 
 .HomeLogo {
-  padding: 20px 20px;
+  padding: 10px 10px;
   position: relative center;
 }
 
