--- a/styles/library.css
+++ b/styles/library.css
@@ -1,5 +1,5 @@
 /* colors 
-white: #f1f1f1
+white: #FFFFFF
 purple: #A41C68
 orange: #FF5C27
 dark grey: #252324
@@ -12,14 +12,7 @@ body {
     margin: 0px auto;
     font-family: "Sofia", sans-serif;
 }
-h1 {
-    color: #f1f1f1;
-    text-align: left;
-    font-family: "Sofia", sans-serif;
-    font-size: 30px;
-    margin:20px;
-    font-weight: 100;
-}
+  
 p {
     color: #f1f1f1;
     font-size: 20px;
@@ -59,7 +52,7 @@ nav a {
   
 nav ul {
     margin: 20 auto;
-    padding: 10px 40px;
+    padding: 14px 40px;
     float: right;
 }
 
