--- a/test.css
+++ b/test.css
@@ -61,45 +61,6 @@ nav ul {
     position: relative center;
 }
 
-/* slide show */
-/* oritionaly from: https://www.w3schools.com/howto/howto_js_slideshow.asp */
-/* Slideshow container */
-.slideshow-container {
-    padding-top: 80px;
-    background-color: #333;
-    margin: 0 auto;
-}
-
-.slideshow-container img{
-    overflow: hidden;
-}
-
-/* Hide the images by default  */
-.mySlides {
-    display: none;
-    width: 700px;
-    height: 500px;
-    margin: 0 auto;
-    position: center;
-}
-  
-.mySlides img {
-    width: 100%;
-    height: 100%;
-}
-  
-/* Fading animation */
-.fade {
-    animation-name: fade;
-    animation-duration: 1.5s;
-}
-  
-@keyframes fade {
-    from {opacity: .4}
-    to {opacity: 1}
-}
-
-
 /*search page */
 /* search function styles */
 #textInput {
@@ -133,7 +94,7 @@ nav ul {
     gap: 20px;
     justify-content: space-around;
     padding-right: 30px;
-}
+  }
 
 /* The Modal (background) */
 .modal {
@@ -147,82 +108,33 @@ nav ul {
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
+  }
   
-/* Modal Content/Box */
-.modal-content {
-    background-color: #252324;
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
     width: 80%; /* Could be more or less, depending on screen size */
-    height: 520px;
-}
-
-h1 {
-    color: #f1f1f1;
-    font-size: 40px;
-    text-align: center;
-    padding-bottom: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-    line-height: 1.25;
-    font-family: "Sofia", sans-serif;
-}
-
-h2 {
-    color: #f1f1f1;
-    font-size: 20px;
-    text-align: left;
-    padding-bottom: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
-    margin-left: 650px;
-    line-height: 1.25;
-    font-family: "Sofia", sans-serif;
-}
-
-.purchaseBtn {
-    background-color: #a41c6983;
-    color: #252324;
-    font-size: 20px;
-    width: 150px;
-    height: 50px;
-    margin: 20px;
-}
-
-.playBtn {
-    background-color: #FF5C27;
-    color: #252324;
-    font-size: 20px;
-    width: 150px;
-    height: 50px;
-    margin: 20px;
-}
-
-.modal-content img {
-    width: 650px;
-    height: 400px;
-    float: left;
-}
+  }
   
-/* The Close Button */
-.close {
+  /* The Close Button */
+  .close {
     color: #aaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
-}
+  }
   
-.close:hover,
-.close:focus {
+  .close:hover,
+  .close:focus {
     color: black;
     text-decoration: none;
     cursor: pointer;
-}
+  }
 
 button {
     background-color: #252324;
     border: none;
 }
-
